k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-http-server-service
  namespace: go-http-server-namespace
  labels:
    app: go-http-server
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-http-server
